# HybridVM

./: Cargo.toml  README.md
frame/evm-precompile/call-hybird-vm/: Cargo.toml
frame/evm-precompile/call-hybird-vm/src/: lib.rs
frame/evm-precompile/call-hybrid-vm/: Cargo.toml
frame/evm-precompile/call-hybrid-vm/src/: lib.rs
frame/evm-precompile/call-vm/: Cargo.toml
frame/evm-precompile/call-vm/src/: lib.rs
frame/hybird-vm/: Cargo.toml
frame/hybird-vm/src/: lib.rs  mock.rs  tests.rs
frame/hybird-vm/src/interoperate/: mod.rs
frame/hybrid-vm/: Cargo.toml
frame/hybrid-vm-port/: Cargo.toml
frame/hybrid-vm-port/src/: lib.rs  mock.rs  port.rs
frame/hybrid-vm-port/src/tests/: eip1559.rs  eip2930.rs  legacy.rs  mod.rs
frame/hybrid-vm/fixtures/: erc20.wasm
frame/hybrid-vm/src/: lib.rs  mock.rs  tests.rs
frame/hybrid-vm/src/interoperate/: mod.rs
primitives/system/: Cargo.toml
primitives/system/src/: lib.rs
scripts/: build.sh  init.sh  test.sh
