[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1
debug-assertions = true
overflow-checks = true

[workspace]
members = [
    "primitives/system",
	"frame/hybrid-vm",
	"frame/evm-precompile/call-hybrid-vm",
	"frame/hybrid-vm-port",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache License 2.0"
repository = "https://github.com/"

[workspace.dependencies]
assert_matches = "1.3.0"
blake2-rfc = { version = "0.2.18", default-features = false }
byte-slice-cast= { version = "1.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
ethereum = { version = "0.15.0", default-features = false }
ethereum-types = { version = "0.14.1", default-features = false }
evm = { version = "0.41.1", default-features = false, features = ["with-codec"] }
getrandom = { version = "0.2", features = ["js"] }
hex = { version = "0.4.3", default-features = false }
hex-literal = "0.4.1"
libsecp256k1 = { version = "0.7.1", default-features = false }
lite-json = { version = "0.1", default-features = false }
log = { version = "0.4.21", default-features = false }
paste = "1.0"
pretty_assertions = "0.7"
rlp = { version = "0.5.2", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.2", default-features = false, features = ["derive", "serde"] }
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0.114", default-features = false }
sha3 = { version = "0.8", default-features = false }
wat = "1"

# Substrate Frame
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }

# Substrate Primitive
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }

# frontier
fp-consensus = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
fp-ethereum = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
fp-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
fp-self-contained = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
fp-storage = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }

# ink
ink_env = { git = "https://github.com/paritytech/ink" }

