[package]
name = "pallet-hybrid-vm"
version = "0.5.0"
description = "Engine for Hybrid vm"
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
blake2-rfc = { workspace = true, default-features = false }
byte-slice-cast= { workspace = true, default-features = false }
codec = { workspace = true, features = ["derive"], default-features = false }
ethereum = { workspace = true, features = ["with-codec"] }
getrandom = { workspace = true, features = ["js"] }
hex = { workspace = true, default-features = false, features = ['alloc'] }
lite-json = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive", "serde"] }
serde = { workspace = true, default-features = false, features = ['derive'] }
serde_json = { workspace = true, features = ['alloc'] }
sha3 = { workspace = true, default-features = false }

# Substrate
frame-support = { workspace = true, default-features = false}
frame-system = { workspace = true, default-features = false}
sp-core = { workspace = true, default-features = false}
sp-keystore = { workspace = true, default-features = false}
sp-io = { workspace = true, default-features = false}
sp-runtime = { workspace = true, default-features = false}
sp-std = { workspace = true, default-features = false}
pallet-contracts = { workspace = true, default-features = false}

# frontier
pallet-evm = { workspace = true, default-features = false}
fp-evm = { workspace = true, default-features = false}

#ink
ink_env = { workspace = true, features = ["no-panic-handler"] }

# hybrid vm
hp-system = { workspace = true, default-features = false }

[dev-dependencies]
assert_matches = { workspace = true }
hex-literal = { workspace = true }
paste = { workspace = true }
pretty_assertions = { workspace = true }
wat = { workspace = true }

pallet-balances = { workspace = true, default-features = false}
pallet-insecure-randomness-collective-flip = { workspace = true, default-features = false}
pallet-timestamp = { workspace = true, default-features = false}
pallet-transaction-payment = { workspace = true, default-features = false}

pallet-evm-precompile-simple = { workspace = true, default-features = false}

pallet-evm-precompile-call-hybrid-vm = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"ethereum/std",
	"frame-support/std",
	"frame-system/std",
	"serde/std",
	"lite-json/std",
	"hex/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore/std",
	"sp-runtime/std",
	"sp-std/std",
	"log/std",
	"serde_json/std",
	"byte-slice-cast/std",
	"sha3/std",
	"blake2-rfc/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"pallet-contracts/std",
	"pallet-evm/std",
	"fp-evm/std",
	"ink_env/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-evm/try-runtime",
	"pallet-contracts/try-runtime",
]