[package]
name = "pallet-evm-precompile-call-vm"
version = "0.2.0"
description = "CallWasmC precompiles for EVM pallet."
repository.workspace = true
edition.workspace = true

[dependencies]
codec = { workspace = true, features = ["derive"], default-features = false }
evm = { workspace = true, default-features = false, features = ["with-codec"] }

# Substrate
sp-core = { workspace = true, default-features = false}
sp-io = { workspace = true, default-features = false}
sp-std = { workspace = true, default-features = false}
sp-runtime = { workspace = true, default-features = false}
frame-support = { workspace = true, default-features = false}
frame-system = { workspace = true, default-features = false}
pallet-contracts = { workspace = true, default-features = false}

# frontier
pallet-evm = { workspace = true, default-features = false}
fp-evm = { workspace = true, default-features = false}

pallet-hybird-vm = { version = "0.2.0", path = "../../hybird-vm", default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",	
	"pallet-contracts/std",
	"pallet-evm/std",
	"fp-evm/std",
	"evm/std",
	"codec/std",
	"pallet-evm/std",
	"pallet-hybird-vm/std",
]